--- a/src/components/ShootingStars.css
+++ b/src/components/ShootingStars.css
@@ -25,12 +25,12 @@
   content: '';
   position: absolute;
   top: 50%;
-  right: 4px;
+  left: 4px;
   transform: translateY(-50%);
   width: 80px;
   height: 2px;
   background: linear-gradient(
-    to left,
+    to right,
     rgba(255, 255, 255, 0.9),
     rgba(255, 255, 255, 0.5) 30%,
     transparent
@@ -41,13 +41,13 @@
 @keyframes shooting {
   0% {
     opacity: 1;
-    transform: translate(0, 0) rotate(-45deg);
+    transform: translate(0, 0) rotate(45deg);
   }
   70% {
     opacity: 1;
   }
   100% {
     opacity: 0;
-    transform: translate(200px, 200px) rotate(-45deg);
+    transform: translate(-200px, 200px) rotate(45deg);
   }
 }
